--- a/WebDev Projects/Mo/mo.htm
+++ b/WebDev Projects/Mo/mo.htm
@@ -8,6 +8,8 @@
 
 <body>
 
+<a name="eleje"></a>
+
 <h1> 
 	<a href="https://hu.wikipedia.org/wiki/Magyarorsz%C3%A1g" target="_blank">
 	Magyarország
@@ -91,7 +93,9 @@ Magyarország legmagasabb vidéke, a Duna visegrádi áttörésétől a Bodrogig
 ami a Zagyva-völgytől kelet felé magasodik, az ország legmagasabb csúcsával (Kékes, 1014 m).
 Az Északi-középhegységhez tartozik egy egyfajta átmenet a hegység és az alföld között.</p>
 
-<h3>Vízrajz</h3>
+<h3>Vízrajz
+	<a href="#eleje"><img src="kicsihaz.jpg" alt="kicsihaz" title="Visszatérés az oldal elejére"></a>
+</h3>
 
 <p>A Kárpát-medence csaknem teljes egészében a Duna vízgyűjtő területéhez tartozik.
 Magyarország azonban nemcsak édesvízben, de hévizekben is gazdag, sőt Európa hévízben
@@ -112,7 +116,7 @@ közel 10,1 km2-t nádas borít.</p>
 
 <a name="egh"></a>
 <h3>Éghajlat
-	<img src="kicsihaz.jpg" alt="kicsihaz">
+	<a href="#eleje"><img src="kicsihaz.jpg" alt="kicsihaz" title="Visszatérés az oldal elejére"></a>
 </h3>
 
 <p>Magyarország három éghajlati terület határán helyezkedik el, időjárását a keleti nedves
