--- a/WebDev Projects/Mo/mo.htm
+++ b/WebDev Projects/Mo/mo.htm
@@ -37,6 +37,8 @@
 	
 <p>Tudnivalók <a href="nepesseg.html">Mo népességéről</a></p>
 
+<p><a href="">Írjon nekünk!</p>
+
 <hr>	
 
 <h2>Általános tudnivalók</h2>
@@ -94,7 +96,7 @@ ami a Zagyva-völgytől kelet felé magasodik, az ország legmagasabb csúcsáva
 Az Északi-középhegységhez tartozik egy egyfajta átmenet a hegység és az alföld között.</p>
 
 <h3>Vízrajz
-	<a href="#eleje"><img src="kicsihaz.jpg" alt="kicsihaz" title="Visszatérés az oldal elejére"></a>
+	<a href="#eleje"><img src="kicsihaz.jpg" alt="kicsihaz" border="5" title="Visszatérés az oldal elejére"></a>
 </h3>
 
 <p>A Kárpát-medence csaknem teljes egészében a Duna vízgyűjtő területéhez tartozik.
