--- a/WebDev Projects/Mo/mo.htm
+++ b/WebDev Projects/Mo/mo.htm
@@ -37,7 +37,8 @@
 	
 <p>Tudnivalók <a href="nepesseg.html">Mo népességéről</a></p>
 
-<p><a href="">Írjon nekünk!</p>
+<p><a href="mailto:info@vasvari.org" target="_blank">Írjon nekünk!</a></p>
+<p>Töltse le a <a href="mo.zip">forrásfájlok</a>at!</p>
 
 <hr>	
 
