--- a/WebDev Projects/Mo/alaptabla.html
+++ b/WebDev Projects/Mo/alaptabla.html
@@ -19,12 +19,13 @@
         <li>align = igazítás vízszintesen az ablak szélei között</li>
         <li>width = táblázat szélessége</li>
         <li>bgcolor = háttérszín</li>
+        <li>height = sormagasság</li>
     </ul>
 <h2>Péla: 5 sorból és 7 oszlopból álló táblázat</h2>
 
 <!-- table>tr*5>td*7 -->
 
-        <table border="1" cellspacing="0" cellpadding="10" align="center" width="50%" bgcolor="yellow">
+        <table border="1" cellspacing="0" cellpadding="10" align="center" width="50%" bgcolor="yellow" height="20">
         <tr bgcolor="silver">
             <th>A</th>
             <th>B</th>
