--- a/WebDev Projects/biro_laszlo/szerkezet.html
+++ b/WebDev Projects/biro_laszlo/szerkezet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -12,13 +12,13 @@
     <div class="container">
     <table class="table-class">
         <tr class="elso-sor">
-            <td class="otvenpx" rowspan="3"><img src="img/toll.png" alt="toll"></td>
-            <td><img class="border-one" src="img/szerk.png" alt="Bíró László"></td>
-            <td class="otvenpx"rowspan="3"><img src="img/toll.png" alt="toll"></td>
+            <td class="fiftypx" rowspan="3"><img src="img/toll.png" alt="toll"></td>
+            <td class="link-cell"><h1><a class="link" href="biro.html">Bíró László</a></h1></td>
+            <td class="fiftypx"rowspan="3"><img src="img/toll.png" alt="toll"></td>
         </tr>
        
         <tr class="masodik-sor">
-            <td class="link-cell"><h1><a class="link" href="szerkezet.html">A golyóstoll szerkezete</a></h1></td>
+            <td><img class="border-one" src="img/magyarazat.jpg" alt="Szerkezet"></td>
             <td></td>
             <td></td>
         </tr>
@@ -44,4 +44,6 @@
         </tr>
       </table>
     </div>
+
+
 </body>
