Grid container on index page

--- a/WebDev Projects/satchecker/index.html
+++ b/WebDev Projects/satchecker/index.html
@@ -10,9 +10,11 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="bg-indigo">
+
     <nav id="navigation-menu"></nav>
 <!-- end of nav menu -->
-    <div class="container-fluid body">
+<main class="container">
+    <div class="body">
       <div class="row px-5">
         <div class="col align-self-center">
           <h1>Welcome to Statchecker</h1>
@@ -26,24 +28,27 @@
       </div>
     </div>
 <!-- end of first section -> -->
-    <div class="container-fluid body bg-purple">
-      <div class="<div class="container">
-        <div class="col align-self-center">
-            <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+    <div class="container-fluid p-4 bg-purple">
+
+        <div class="row d-flex justify-content-around align-self-center">
+
+            <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
-              <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+
+              <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
-              <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+
+              <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
@@ -52,10 +57,10 @@
               </div>
       </div>
         
-      </div>
     </div>
 
-    </div>
+  
+    </main>
   </body>
 
   <script src="js/nav.js"></script>
