--- a/WebDev Projects/citrusok-forras/index.html
+++ b/WebDev Projects/citrusok-forras/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <!-- Citrom -->
-            <div class="col-sm-6 col-lg-4 col-xl-3">
+            <div class="col-sm-6 col-lg-4 col-xl-3 < fa-chevron-circle-down    "></i>">
                 <img src="img/citrom.jpg" alt="Citrom" class="img-fluid img-thumbnail">
                 <h3>Citrom</h3>
                 <p> A citrom, más néven közönséges citrom, valódi citrom vagy európai citrom[1] (Citrus × limon) a
