--- a/WebDev Projects/satchecker/check-a-satellite.html
+++ b/WebDev Projects/satchecker/check-a-satellite.html
@@ -6,23 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/bootstrap.min.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Statchecker</title>
+    <title>Check a Satellite</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="bg-indigo">
     <nav id="navigation-menu"></nav>
 
     <div class="container-fluid body">
-      <div class="row px-5">
-        <div class="col align-self-center">
-          <h1>Welcome to Statchecker</h1>
-          <h2>Find the nearest satelite over your head</h2>
-          <p>Get alerts the closest satelite gets over your head</p>
-        </div>
-        <div class="col align-self-center">
-          <img width="300px" src="img/satelite.png" alt="mockup" />
-        </div>
-      </div>
+    
+<form>
+ 
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Choose Your Location</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Szeged</option>
+      <option>Deszk</option>
+      <option>Budapest</option>
+      <option>Győr</option>
+      <option>Pécs</option>
+    </select>
+ 
+  </div>
+</form>
+
     </div>
   </body>
 
