--- a/WebDev Projects/satchecker/what-is-satchecker.html
+++ b/WebDev Projects/satchecker/what-is-satchecker.html
@@ -6,24 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/bootstrap.min.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Statchecker</title>
+    <title>What is Satchecker?</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="bg-indigo">
     <nav id="navigation-menu"></nav>
 
-    <div class="container-fluid body">
-      <div class="row px-5">
-        <div class="col align-self-center">
-          <h1>Welcome to Statchecker</h1>
-          <h2>Find the nearest satelite over your head</h2>
-          <p>Get alerts the closest satelite gets over your head</p>
-        </div>
-        <div class="col align-self-center">
-          <img width="300px" src="img/satelite.png" alt="mockup" />
-        </div>
-      </div>
-    </div>
+  <main>
+
+<div>
+  <div class="container">
+
+    <h1>What is Satchecker?</h1>
+    <p>Satchecker is a website where you can check if there is a satellite over your head at your location.</p>
+    <p>Simply just hit the "Check a Satellite" in the navigation bar, add your location and see the results.</p>
+  </div>
+</div>
+
+  </main>
+
   </body>
 
   <script src="js/nav.js"></script>
