--- a/WebDev Projects/satchecker/index.html
+++ b/WebDev Projects/satchecker/index.html
@@ -8,47 +8,47 @@
     <link rel="stylesheet" href="style/style.css" />
     <title>Statchecker</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
   </head>
   <body class="bg-indigo">
 
     <nav id="navigation-menu"></nav>
 <!-- end of nav menu -->
-<main class="container">
-    <div class="body">
-      <div class="row px-5">
-        <div class="col align-self-center">
-          <h1>Welcome to Statchecker</h1>
+<main class="container-fluid">
+    <div class="container body">
+      <div class="row">
+        <div class="col-lg-6 align-self-center">
+          <h1>Welcome to Satchecker</h1>
           <h2>Find the nearest satelite over your head</h2>
           <p>Get alerts the closest satelite gets over your head</p>
           <a href="check-a-satellite.html"><button type="button" class="btn btn-light" >Check my location</button></a>
         </div>
-        <div class="col align-self-center">
-          <img width="400px" src="img/satelite.png" alt="satelite" />
+        <div class="col-lg-6 align-self-center">
+          <img class="image-fluid" width="400px" src="img/satelite.png" alt="satelite" />
         </div>
       </div>
     </div>
-<!-- end of first section -> -->
-    <div class="container-fluid p-4 bg-purple">
+<!-- end of first section -->
+    <div class="container">
 
         <div class="row d-flex justify-content-around align-self-center">
 
-            <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
-                <div class="card-header">Header</div>
+            <div class="card col-lg-4 text-white bg-dark mb-3">
+                <div class="card-header text-uppercase">Check the satellites above your <head></head></div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
 
-              <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
+              <div class="card col-lg-4 text-white bg-dark mb-3 text-uppercase">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
-
-              <div class="card col-sm text-white bg-dark mb-3" style="max-width: 33%;">
+              <div class="card col-lg-4 text-white bg-dark mb-3 text-uppercase">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Dark card title</h5>
@@ -65,6 +65,6 @@
 
   <script src="js/nav.js"></script>
   <script src="js/footer.js"></script>
-
+  
   <footer id="footer"></footer>
 </html>
