--- a/WebDev Projects/satchecker/nav.html
+++ b/WebDev Projects/satchecker/nav.html
@@ -1,4 +1,4 @@
-<nav id="" class="navbar navbar-expand-lg navbar-dark bg-indigo-dark">
+<nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-indigo-dark">
   <a class="navbar-brand" href="#">Statchecker</a>
   <button
     class="navbar-toggler"
@@ -7,16 +7,14 @@
     data-target="#navbarNav"
     aria-controls="navbarNav"
     aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+    aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse " id="navbarNav">
+    <ul class="navbar-nav mx-auto">
       <li class="nav-item active">
         <a class="nav-link" href="index.html"
-          >Home <span class="sr-only">(current)</span></a
-        >
+          >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="what-is-satchecker.html">What is SatChecker</a>
