--- a/WebDev Projects/satchecker/contact.html
+++ b/WebDev Projects/satchecker/contact.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
     <link rel="stylesheet" href="style/bootstrap.min.css" />
     <link rel="stylesheet" href="style/style.css" />
     <title>Contact</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
   </head>
   <body class="bg-indigo">
     <nav id="navigation-menu"></nav>
