--- a/WebDev Projects/satchecker/index.html
+++ b/WebDev Projects/satchecker/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/bootstrap.min.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Statchecker</title>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
+    <title>Satchecker</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    
+
   </head>
   <body class="bg-indigo">
-
+    
     <nav id="navigation-menu"></nav>
+  
 <!-- end of nav menu -->
 <main class="container-fluid">
     <div class="container body">
