--- a/WebDev Projects/satchecker/nav.html
+++ b/WebDev Projects/satchecker/nav.html
@@ -1,30 +1,28 @@
-<nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-indigo-dark">
-  <a class="navbar-brand" href="#">Statchecker</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNav"
-    aria-controls="navbarNav"
-    aria-expanded="false"
-    aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-indigo-dark">
+  <a class="navbar-brand" href="#">
+    <img src="img/satellite-dish.png" width="30" height="30" alt="">
+  </a>
+  <a class="navbar-brand" href="#">Satchecker</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse " id="navbarNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html"
-          >Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="what-is-satchecker.html">What is SatChecker</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="check-a-satellite.html">Check a Satellite</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-    </ul>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     
   </div>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" href="index.html"
+        >Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="what-is-satchecker.html">What is SatChecker</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="check-a-satellite.html">Check a Satellite</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact</a>
+    </li>
+  </ul>
 </nav>
