some more tweaks and privacy policy page

--- a/WebDev Projects/satchecker/what-is-satchecker.html
+++ b/WebDev Projects/satchecker/what-is-satchecker.html
@@ -16,14 +16,20 @@
 
   <main>
 
-<div>
-  <div class="container">
+<div class="row">
 
+  <div class="col-lg-6 container">
     <h1>What is Satchecker?</h1>
     <p>Satchecker is a website where you can check if there is a satellite over your head at your location.</p>
-    <p>Simply just hit the "Check a Satellite" in the navigation bar, add your location and see the results.</p>
+    <p>Simply just hit the <a href="check-a-satellite.html" target="_self">"Check a Satellite"</a> in the navigation bar, add your location and see the results.</p>
   </div>
+  
+  <div class="col-lg-6 container">
+    <img src="img/satellite-overview.jpg" alt="Satchecker" class="img-fluid">
+  </div>
+
 </div>
+
 
   </main>
 
