--- a/WebDev Projects/satchecker/footer.html
+++ b/WebDev Projects/satchecker/footer.html
@@ -1,10 +1,10 @@
-<div class="bg-indigo-dark p-2 d-flex flex-row justify-content-between">
+<div class="bg-indigo-dark p-2 d-flex flex-row justify-content-between px-5">
         <div>
         <p class="body mt-3 ">Copyright 2023 Statchecker</p>
     </div>
        <div class="d-flex flex-row">
-        <p class="body mt-3 mr-3">Nasa API</p>
-        <p class="body mt-3 ">Privacy Policy</p>
+        <a href="https://api.nasa.gov/" target="_blank" class="body mt-3 mr-3">Nasa API</a>
+        <a href="privacy-policy.html" target="_blank" class="body mt-3 ">Privacy Policy</a>
         </div>
 
 </div>
