--- a/WebDev Projects/satchecker/nav.html
+++ b/WebDev Projects/satchecker/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-indigo-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-indigo-dark px-5">
   <a class="navbar-brand" href="#">
     <img src="img/satellite-dish.png" width="30" height="30" alt="">
   </a>
