--- a/WebDev Projects/sarkanyhajozas/sarkanyhajozas.html
+++ b/WebDev Projects/sarkanyhajozas/sarkanyhajozas.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 
 <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/bootstrap.min.css">
+    <link rel="stylesheet" href="style/sarkany.css">
+    
+    <title>Sárkányhajózás</title>
 </head>
 
 <body>
-
+<div id="leiras">
         Sárkányhajózás
         
         [A sárkányhajó egy olyan 12,5 m hosszú kenu típusú hajó, melyet elöl sárkányfej, hátul pedig sárkányfarok díszít.]
@@ -43,7 +48,7 @@
         legénység: 20 fő lapátos, 1 fő dobos, 1 fő kormányos és 4 fő tartalék alkot egy legénységet (crew)
 
         <div id="forras">Forrás: a wikipédia oldala a <a href="https://hu.wikipedia.org/wiki/S%C3%A1rk%C3%A1nyhaj%C3%B3">sárkányhajókról</a></div>
-
+</div>
 </body>
 
 </html>
