--- a/WebDev Projects/bootstrap/kontenerek.html
+++ b/WebDev Projects/bootstrap/kontenerek.html
@@ -16,7 +16,7 @@
         Fluid tároló
     </div>
 
-        Ide írtam most egy szöveget!
+        Ide írtam most egy szöveget! egegre
 
     </container>
 </body>
