--- a/JavaScript Projects/tombok-beadando.html
+++ b/JavaScript Projects/tombok-beadando.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Kétdimenziós tömb főátló összege</title>
+    <!-- Teszáry Péter 1/13 be-->
 	<script>
 		window.onload = function() {
 			var n = 5; // N értéke
@@ -25,7 +26,7 @@
 
 			// főátló összeg kiírása
 			var result = document.getElementById("result");
-			result.innerHTML = "Főátló összege: " + sum;
+			result.innerHTML = "A főátló összege: " + sum;
 		};
 	</script>
 </head>
