--- a/WebDev Projects/mobiltelefonok_pt/index.html
+++ b/WebDev Projects/mobiltelefonok_pt/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css.map">
+    <link rel="stylesheet" href="css/mobilstyle.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <title>Mobiltelefonok
+    </title>
 </head>
 <body>
-    
+    <nav id="navigation-menu"></nav>
 </body>
+
+
+<script src="js/header.js"></script>
+<script src="js/footer.js"></script>
+
+<footer id="footer"></footer>
+
 </html>
