--- a/WebDev Projects/mobiltelefonok_pt/header.html
+++ b/WebDev Projects/mobiltelefonok_pt/header.html
@@ -20,9 +20,9 @@
               Telefonok listája
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Klasszikus mobiltelefonok</a></li>
+              <li><a class="dropdown-item" href="#">Érintőképernyős mobiltelefonok</a></li>
+              <li><a class="dropdown-item" href="#">Mobiltelefonok ma</a></li>
             </ul>
           </li>
         </ul>
