--- a/WebDev Projects/mobiltelefonok_pt/index.html
+++ b/WebDev Projects/mobiltelefonok_pt/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css.map" />
+   <!--  <link rel="stylesheet" href="css/bootstrap.min.css.map" /> -->
     <link rel="stylesheet" href="css/mobilstyle.css" />
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
     <title>Mobiltelefonok</title>
+    <nav id="header-section"></nav>
   </head>
   <body>
-    <nav id="navigation-menu"></nav>
-  </body>
+    <section id="hero-section"></section>
+    <section id="cards-section"></section>
 
-  <div class="container bg-black">
-    <div class="row" height="50%"></div>
-  </div>
+    
+
+
+  </body>
+  
+  <script src="js/sections.js"></script>
   <script src="js/header.js"></script>
   <script src="js/footer.js"></script>
 
