--- a/WebDev Projects/mobiltelefonok_pt/mobiltortenelem.html
+++ b/WebDev Projects/mobiltelefonok_pt/mobiltortenelem.html
@@ -11,9 +11,10 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <title>Mobiltelefonok</title>
+    <nav id="header-section"></nav>
   </head>
   <body>
-    <nav id="navigation-menu"></nav>
+    
   </body>
 
   <div class="container bg-black">
