--- a/WebDev Projects/mobiltelefonok_pt/telefonok_listaja.html
+++ b/WebDev Projects/mobiltelefonok_pt/telefonok_listaja.html
@@ -10,10 +10,11 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Mobiltelefonok</title>
+    <title>Mobiltelefonok</title>,
+    <nav id="header-section"></nav>
   </head>
   <body>
-    <nav id="navigation-menu"></nav>
+    
   </body>
 
   <div class="container bg-black">
