--- a/JavaScript Projects/tudasszintmero_teszt/index.html
+++ b/JavaScript Projects/tudasszintmero_teszt/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <h1 class="mt-5">Tudásszintmérő teszt</h1>
-    <form id="testForm" style="padding: 20px;">
+    <form id="dataForm" style="padding: 20px;">
       <fieldset>
         <legend>Személyes adatok és jelszó megadása:</legend>
         <div class="mb-3">
@@ -33,6 +33,7 @@
         </div>
       </fieldset>
 
+      <form id="testForm" style="padding: 20px;">
       <fieldset>
         <legend>Teszt kitöltése:</legend>
         <div class="mb-3">
@@ -105,7 +106,8 @@
         </div>
     </div>
   </fieldset>
-  
+</form>
+
   <div class="mb-3">
     <button type="submit" class="btn btn-primary">Ellenőriz</button>
   </div>
