--- a/JavaScript Projects/tudasszintmero/tudasszintmero.html
+++ b/JavaScript Projects/tudasszintmero/tudasszintmero.html
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
               <label for="szuletesiIdo">Születési idő:</label>
-              <input type="date" id="szuletesiIdo" class="form-control" required pattern="\d{4}\.\d{2}\.\d{2}\.">
+              <input type="date" id="szuletesiIdo" class="form-control" required>
             </div>
             <div class="form-group">
               <label for="jelszo">Jelszó:</label>
@@ -55,9 +55,9 @@
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="question1" id="question1Option3" value="Safari">
                   <label class="form-check-label" for="question1Option3">Safari</label>
-                  </div>
-                  <div class="form-check">
-                  <input class="form-check-input" type="radio" name="question1" id="question1Option4" value="Opera">
+                </div>
+                <div class="form-check">
+                  <inputclass="form-check-input" type="radio" name="question1" id="question1Option4" value="Opera">
                   <label class="form-check-label" for="question1Option4">Opera</label>
                   </div>
                   </div>
@@ -89,22 +89,23 @@
                   <textarea id="question4" class="form-control" required></textarea>
                   </div>
                   <div class="form-group">
-                  <label>5. kérdés: Melyik HTML tag jelöli az oszlop vagyis <span id="missingWord"></span> típusú és melyik a sor vagyis <span id="missingWordtwo"></span> típusú elemeket?</label>
+                  <label>5. kérdés: Melyik HTML tag jelöli az oszlop vagyis <col> típusú és melyik a sor vagyis <row> típusú elemeket?</label>
                   <p id="wordOrder"></p>
                   <form id="answerForm">
                   <input type="text" id="answerInput" required>
                   <input type="text" id="answerInputtwo" required>
                   </form>
-                  <div id="result"></div>
                   </div>
                   </div>
-                  <!-- Teszt vége -->
-                  <button id="submitButton" class="btn btn-warning btn-primary" style="display: none;" type="submit">Ellenőriz</button>
                   </fieldset>
                   </form>
                   </div>
+                  <!-- Teszt vége -->
                   </div>
+                  <button id="submitButton" class="btn btn-warning btn-primary mt-4" style="display: none;" type="submit">Ellenőriz</button>
+                  <div id="score" class="container mt-4"></div>
                   
                     </div>
-                    <div id="score" class="container mt-4"></div>
                     <script src="tudasszintmero.js"></script>
+                  </body>
+                  </html>
